--- a/Styles.css
+++ b/Styles.css
@@ -1,21 +1,34 @@
-.Head {
-    padding: auto;
+.header {
+    background-color: #49417a;
     width: 100%;
-    height: 50px;
-    background-color: aqua;
+    height: 150px;
+    text-align: center;
+    
+    
+    
+    
+
 }
 
 h1 {
-    font-family: sans-serif;
-    text-align: center;
-    color: blueviolet;
+display: inline-block;
+border-bottom: 1px;
+    color: azure;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
 body {
-    background-color: bisque;
+background: linear-gradient(to right, gray, black)
+
+}
+#logo {
+    display: inline-block;
+    width: 150px;
+    height: 150px;
 }
 
- img{
-    width: max (100px, 18vw);
-    padding: auto;
- }
+.row {
+    
+
+    
+
+}
