--- a/Styles.css
+++ b/Styles.css
@@ -1,4 +1,5 @@
-.header {
+header {
+   display:inline-block;
     background-color: #49417a;
     width: 100%;
     height: 150px;
@@ -11,10 +12,10 @@
 }
 
 h1 {
-display: inline-block;
+    padding: 5px;
 border-bottom: 1px;
-    color: azure;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: blueviolet;
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
 }
 body {
 background: linear-gradient(to right, gray, black);
@@ -24,20 +25,30 @@ padding: 0;
 
 }
 #logo {
-    display: inline-block;
     width: 150px;
     height: 150px;
 }
 
 #knifegirl {
+    float: right;
     width: 340px;
     height: 340px;
-}
-.image-container1 {
-
     position: relative;
-} 
+ margin: 5px;
+}
 
 
+#squidgirl {
+float: right;
+ width: 350px;
+ height:500px;
+ margin: 5px;
+}
 
+#dogcat {
+    width: 350px;
+    height: 500px;
+    margin: 5px;
+
+}
 
