--- a/Styles.css
+++ b/Styles.css
@@ -1,45 +1,49 @@
 .header {
     background-color: #49417a;
-    width: 100%;
-    height: 150px;
     display: flex;
-    align-items: center;
+    
+    
+
+    
 }
 
 h1 {
-    padding: 5px;
-border-bottom: 1px;
+    text-align: center;
+    display:block;
     color: blueviolet;
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
+    font-family: 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
 }
 
 body {
 background: linear-gradient(to right, gray, black);
 
+
 }
 #logo {
+    display: block;
+margin: 1px;
     width: 150px;
     height: 150px;
 }
 
 #knifegirl {
-    display: flex;
+    display: block;
     width: 340px;
     height: 340px;
-    position: relative;
+    align-content: center;
  margin: 5px;
 }
 
 
 #squidgirl {
-display: flex;
+display: block;
  width: 250px;
  height:350px;
  margin: 5px;
 }
 
 #dogcat {
-    display: flex;
+    display: block;
     width: 250px;
     height: 350px;
     margin: 5px;
