--- a/Styles.css
+++ b/Styles.css
@@ -1,36 +1,48 @@
-.header {
-    background-color: #49417a;
-    display: block;
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-h1 {
-    text-align: center;
-    display:block;
-    color: blueviolet;
-    font-family: AmaticSC;
-    font-style: oblique;
-    font-size: 50px;
-    margin: 3px 3px;
-}
-
 body {
-background: linear-gradient(to right, purple, black);
-
-
+    background-color: blueviolet, mediumseagreen;
+    margin: 0;
+    padding: 0;
 }
-#logo {
-
+header {
     display: flex;
-margin-left:auto;
-margin-right: auto;
-    width: 150px;
-    height: 150px;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    border-left:3px solid black;
+    background-color: #48407a;
+    color: blueviolet;
+    padding: 10px 0;
+}
+.title-container {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    text-align: center;
+}
+nav {
+    display:flex;
+    font-family: AmaticSC;
+    align-items:center;
+    text-align: right;
+}
+h1 {
+    font-family: AmaticSC;
+    margin: 0;
+    font-size: 45px;
 }
 
+img {
+    
+    width: 150px; /* Adjust the width as needed */
+    height: 150px; /* Maintain aspect ratio */
+}
 #knifegirl {
+    border-top-left-radius: 20px; /*border-top or bottom-left or right-radius creates soft edges*/
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 15px;
+
     margin: 15px 15px;
     display: block;
     width: 340px;
@@ -38,6 +50,10 @@ margin-right: auto;
  
 }
 #squidgirl {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 15px;
 
     display: block;
     width: 250px;
@@ -45,6 +61,11 @@ margin-right: auto;
     margin: 15px 15px;
 }
 #dogcat {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 15px;
+
     display: block;
     width: 250px;
     height: 350px;
@@ -52,6 +73,11 @@ margin-right: auto;
 
 }
 #celebration {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 15px;
+
     margin: 15px 15px;
     display: block;
     width: 250px;
@@ -59,12 +85,22 @@ margin-right: auto;
 
 }
 #fishgirl {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 15px;
+
     margin: 15px 15px;
     display: block;
     width: 350px;
     height: 350px;    
 }
 #fireflies {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 15px;
+    
     margin: 15px 15px;
     display: block;
     width: 400px;
@@ -72,6 +108,11 @@ margin-right: auto;
 }
 
 #oceanmother {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 15px;
+    
     margin: 15px 15px;
     display: block;
     width: 300px;
@@ -93,7 +134,8 @@ margin-right: auto;
 } 
 
 .image-gallery {
-flex-wrap: wrap;
- display: flex;
+    background:linear-gradient(#48407a, mediumseagreen);
+    flex-wrap: wrap;
+    display: flex;
 
 }
